<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_1" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_president_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/president_1" />

            <RadioButton
                android:id="@+id/radio_president_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/president_2" />

            <RadioButton
                android:id="@+id/radio_president_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/president_3" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_2" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red" />

            <CheckBox
                android:id="@+id/checkbox_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue" />

            <CheckBox
                android:id="@+id/checkbox_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whites" />

            <CheckBox
                android:id="@+id/checkbox_yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow" />

            <CheckBox
                android:id="@+id/checkbox_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green" />

        </LinearLayout>

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_3" />

        <EditText
            android:id="@+id/city_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city_name" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/macri" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/tabare" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/obama" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/mujica" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_answer4_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/radio_answer4_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/radio_answer4_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/radio_answer4_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_5" />

        <EditText
            android:id="@+id/sport_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sport_name" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendAnswers"
            android:text="@string/send" />

    </LinearLayout>

</ScrollView>